--- a/app/cfg/setup.cfg
+++ b/app/cfg/setup.cfg
@@ -3,7 +3,7 @@ DEBUG=3
 UI=app/ui/
 WEB_ROOT=/
 IMPORTS="app/actions/"
-AUTOLOAD="app/actions/; app/lib/; app/models/"
+AUTOLOAD="app/controllers/; app/lib/; app/models/"
 ONERROR=Home->error
 TOKEN_SALT="i:~_q.Lb2uNB1&mbM/J:m}x*L>joZYi]HV|G/T(`iwHZAtr|#Nq=h@n!qf] +9+V^"
 
