注册，登陆，查询功能基本实现。

--- a/app/cfg/routes.cfg
+++ b/app/cfg/routes.cfg
@@ -1,6 +1,20 @@
 [routes]
 
-#Home
-GET	/=Home->run
-GET /login=Home->showlogin
-POST /login=Home->login
+#home
+GET	/=home->run
+
+GET /signup=home->showSignUp
+POST /signup=home->signUp
+
+GET /tinfo=home->showTinfo
+POST /tinfo=home->tinfo
+
+GET /sinfo=home->showSinfo
+POST /sinfo=home->sinfo
+
+GET /login=home->showlogin
+POST /login=home->login
+GET /user/searchT=StudentController->showsearchT
+POST /user/searchT=StudentController->searchT
+
+
