解决合并冲突问题, 更新数据库

--- a/app/cfg/routes.cfg
+++ b/app/cfg/routes.cfg
@@ -3,5 +3,18 @@
 #Home
 GET	/=Home->run
 POST /=Teacherctl->processing_booking_event
-GET /login=Home->showlogin
-POST /login=Home->login
+
+GET /signup=home->showSignUp
+POST /signup=home->signUp
+
+GET /tinfo=home->showTinfo
+POST /tinfo=home->tinfo
+
+GET /sinfo=home->showSinfo
+POST /sinfo=home->sinfo
+
+GET /login=home->showlogin
+POST /login=home->login
+GET /user/searchT=StudentController->showsearchT
+POST /user/searchT=StudentController->searchT
+
