区分学生和老师

--- a/app/cfg/routes.cfg
+++ b/app/cfg/routes.cfg
@@ -2,7 +2,10 @@
 
 #Home
 GET	/=Home->run
-POST /=Teacherctl->processing_booking_event
+GET	/teacher=Home->teacher
+POST /teacher=Teacherctl->processing_booking_event
+
+GET	/student=Home->student
 
 GET /signup=home->showSignUp
 POST /signup=home->signUp
@@ -13,6 +16,7 @@ POST /tinfo=home->tinfo
 GET /sinfo=home->showSinfo
 POST /sinfo=home->sinfo
 
+GET /logout=home->logout
 GET /login=home->showlogin
 POST /login=home->login
 GET /user/searchT=StudentController->showsearchT
